# mlops-pipeline

./: .env.example  README.md  docker-compose.yml  package.json  product_flow.mmd  pyproject.toml
config/: prometheus.yml
src/api/: auth.py  dependencies.py  main.py
src/core/: config.py  logging.py
src/data/: ingestion.py  processing.py
src/mlops/: tracking.py
src/models/: lstm.py  train.py
tests/: test_e2e.py
